feat : support decorator.

--- a/package.json
+++ b/package.json
@@ -4,16 +4,18 @@
   "main": "index.js",
   "license": "MIT",
   "devDependencies": {
-    "typescript": "^2.9.2",
+    "css-loader": "^0.28.11",
     "eslint": "^5.0.1",
     "eslint-config-google": "^0.9.1",
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.9.0",
-    "css-loader": "^0.28.11",
     "sass-loader": "^7.0.3",
     "ts-loader": "^4.4.2",
+    "typescript": "^2.9.2",
     "vue": "^2.5.16",
+    "vue-class-component": "^6.2.0",
     "vue-loader": "^15.2.4",
+    "vue-property-decorator": "^7.0.0",
     "vue-style-loader": "^4.1.0",
     "vue-template-compiler": "^2.5.16",
     "webpack": "^4.14.0",
