--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "dependencies": {
+    "vue": "^2.5.16"
+  },
   "devDependencies": {
     "css-loader": "^0.28.11",
     "eslint": "^5.0.1",
@@ -12,7 +15,6 @@
     "sass-loader": "^7.0.3",
     "ts-loader": "^4.4.2",
     "typescript": "^2.9.2",
-    "vue": "^2.5.16",
     "vue-class-component": "^6.2.0",
     "vue-loader": "^15.2.4",
     "vue-property-decorator": "^7.0.0",
