WIP : テスト環境構築中

--- a/package.json
+++ b/package.json
@@ -4,13 +4,20 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "@vue/test-utils": "^1.0.0-beta.20",
     "vue": "^2.5.16"
   },
   "devDependencies": {
+    "@types/chai": "^4.1.4",
+    "@types/mocha": "^5.2.4",
+    "@types/node": "^10.5.2",
+    "chai": "^4.1.2",
     "css-loader": "^0.28.11",
     "eslint": "^5.0.1",
     "eslint-config-google": "^0.9.1",
     "html-webpack-plugin": "^3.2.0",
+    "mocha": "^5.2.0",
+    "mocha-webpack": "^1.1.0",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.0.3",
     "ts-loader": "^4.4.2",
@@ -27,6 +34,7 @@
   },
   "scripts": {
     "start": "webpack-dev-server --open --config ./webpackconfig/webpack.dev.config.js",
-    "build": "webpack --config ./webpackcpnfig/webpack.prod.config.js"
+    "build": "webpack --config ./webpackcpnfig/webpack.prod.config.js",
+    "test": "webpack --config ./webpackconfig/webpack.prod.config.js && tsc && mocha --recursive"
   }
 }
